--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Renata Garib</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
   <table cellspacing='20'>
     <tr>
-      <td><img src="eu-modified.png" alt="Foto de Renata"></td>
+      <td><img src="images/eu-modified.png" alt="Foto de Renata"></td>
       <td>
         <h1>Renata Garib</h1>
         <p>
